--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "firebase-admin": "^10.0.2",
         "node-fetch": "^2.6.7",
         "nodemon": "^2.0.15",
+        "passwordless-client-js": "^0.1.0",
         "postcss": "^8.4.12",
         "request": "^2.88.2",
         "tailwindcss": "^3.0.23"
